--- a/packages/gatsby-theme-wp-ginger/src/styles/custom-gutenstyles.css
+++ b/packages/gatsby-theme-wp-ginger/src/styles/custom-gutenstyles.css
@@ -3,6 +3,10 @@
 .wp-block-image figure {
   width: 100%;
 }
+figure,
+.gatsby-image-wrapper {
+  max-width: 100%;
+}
 .gatsby-image-wrapper {
   width: 100%;
   height: 100%;
