comments and menu

--- a/packages/gatsby-theme-wp-bootstrap5/src/styles/custom-gutenstyles.css
+++ b/packages/gatsby-theme-wp-bootstrap5/src/styles/custom-gutenstyles.css
@@ -118,3 +118,7 @@ figure,
   bottom: 0;
   background: rgba(0, 0, 0, 0.3);
 }
+
+.wp-block-media-text__media > .gatsby-image-wrapper {
+  width: auto !important;
+}
