--- a/examples/bootstrap5/src/styles/style.scss
+++ b/examples/bootstrap5/src/styles/style.scss
@@ -44,3 +44,7 @@ input[type="search"]::-webkit-search-cancel-button {
     fill: #6c757d !important;
   }
 }
+
+.li.page-item {
+  flex-basis: 0;
+}
