--- a/packages/gatsby-theme-wp-ginger-chakra/src/styles/custom-gutenstyles.css
+++ b/packages/gatsby-theme-wp-ginger-chakra/src/styles/custom-gutenstyles.css
@@ -74,13 +74,6 @@ figure,
   margin-bottom: 0;
 }
 
-.entry-content blockquote,
-.entry-content h1,
-.entry-content h2,
-.entry-content h3,
-.entry-content h4,
-.entry-content h5,
-.entry-content h6,
 .entry-content .animate-on-scroll {
   opacity: 0;
   transform: translate3d(0, 2.5rem, 0);
@@ -117,4 +110,7 @@ figure,
   top: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.3);
+}
+[data-sal='slide-up'] {
+  transform: translateY(2rem);
 }
