--- a/examples/bootstrap5/src/styles/style.scss
+++ b/examples/bootstrap5/src/styles/style.scss
@@ -45,6 +45,6 @@ input[type="search"]::-webkit-search-cancel-button {
   }
 }
 
-.li.page-item {
+.archive-pagination .page-item {
   flex-basis: 0;
 }
