--- a/examples/starter-data-nostyles/src/styles/wp-styles/_custom-gutenstyles.scss
+++ b/examples/starter-data-nostyles/src/styles/wp-styles/_custom-gutenstyles.scss
@@ -11,9 +11,7 @@ figure,
   width: 100%;
   height: 100%;
 }
-.wp-block-gallery {
-  margin-left: 0;
-}
+
 .wp-block-embed__wrapper {
   position: relative;
 }
@@ -63,10 +61,6 @@ figure,
   padding: 1.5rem;
 }
 
-.wp-block-gallery:not(.is-cropped) .blocks-gallery-grid {
-  align-items: flex-end;
-}
-
 *[class*='_inner-container'] > *:last-child {
   margin-bottom: 0;
 }
@@ -107,7 +101,7 @@ figure,
 .blocks-gallery-item {
   overflow: hidden;
 }
-.entry-content .wp-block-gallery .blocks-gallery-item a {
+.entry-content .wp-block-gallery a {
   transition: 1s;
 }
 .blocks-gallery-item a:hover {
