--- a/packages/gatsby-theme-wp-bootstrap5/src/styles/custom-gutenstyles.css
+++ b/packages/gatsby-theme-wp-bootstrap5/src/styles/custom-gutenstyles.css
@@ -14,9 +14,6 @@ figure,
   width: 100%;
   height: 100%;
 }
-.wp-block-gallery {
-  margin-left: 0;
-}
 .wp-block-embed__wrapper {
   position: relative;
 }
@@ -66,10 +63,6 @@ figure,
   padding: 1.5rem;
 }
 
-.wp-block-gallery:not(.is-cropped) .blocks-gallery-grid {
-  align-items: flex-end;
-}
-
 *[class*='_inner-container'] > *:last-child {
   margin-bottom: 0;
 }
@@ -93,8 +86,7 @@ figure,
 .blocks-gallery-item {
   overflow: hidden;
 }
-.entry-content .wp-block-gallery .blocks-gallery-item a {
-  position: relative;
+.entry-content .wp-block-gallery a {
   transition: 1s;
 }
 .blocks-gallery-item a:hover,
