--- a/packages/gatsby-theme-wp-ginger-chakra/src/styles/custom-gutenstyles.css
+++ b/packages/gatsby-theme-wp-ginger-chakra/src/styles/custom-gutenstyles.css
@@ -14,6 +14,10 @@ figure,
   width: 100%;
   height: 100%;
 }
+.wp-block-cover__image-background.gatsby-image-wrapper {
+  width: 100% !important;
+  position: absolute !important;
+}
 .wp-block-embed__wrapper {
   position: relative;
 }
