--- a/examples/starter-base-dev/src/styles/wp-styles/_custom-gutenstyles.scss
+++ b/examples/starter-base-dev/src/styles/wp-styles/_custom-gutenstyles.scss
@@ -18,7 +18,7 @@ figure,
   position: relative;
 }
 .wp-block-embed__wrapper:before {
-  content: "";
+  content: '';
   display: block;
   padding-top: 50%;
 }
@@ -63,33 +63,12 @@ figure,
   padding: 1.5rem;
 }
 
-*[class*="_inner-container"] > *:last-child {
+*[class*='_inner-container'] > *:last-child {
   margin-bottom: 0;
 }
 
-// .entry p,
-// .entry blockquote,
-// .entry h1,
-// .entry h2,
-// .entry h3,
-// .entry h4,
-// .entry h5,
-// .entry h6,
-// .entry-info,
-// .entry .animate-on-scroll {
-//   opacity: 0;
-//   transform: translate3d(0, 2.5rem, 0);
-//   transition-property: opacity, transform, -webkit-transform;
-//   transition-duration: 2s;
-// }
-// .entry .sal-disabled,
-// .entry .sal-animate:nth-child(n) {
-//   opacity: 1;
-//   transform: translate3d(0, 0, 0);
-// }
-
 .dark-color-mode .has-background:not(.has-text-color),
-.dark-color-mode .wp-block-media-text[style*="background"],
+.dark-color-mode .wp-block-media-text[style*='background'],
 .dark-color-mode .wp-block-table.is-style-stripes tbody tr:nth-child(odd) {
   /* background-color: transparent !important; */
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
