--- a/examples/starter-base-dev/src/styles/wp-styles/styles.css
+++ b/examples/starter-base-dev/src/styles/wp-styles/styles.css
@@ -34,7 +34,7 @@ svg {
   }
 }
 
-.wp-caption img[class*="wp-image-"] {
+.wp-caption img[class*='wp-image-'] {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -43,8 +43,8 @@ svg {
 .wp-caption-text {
   color: #767676;
   font-size: 0.71111em;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   line-height: 1.6;
   margin: 0;
@@ -149,8 +149,8 @@ svg {
 .gallery-caption {
   display: block;
   font-size: 0.71111em;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   line-height: 1.6;
   margin: 0;
@@ -406,7 +406,7 @@ svg {
 
 .wp-block-cover-image.has-background-dim:before,
 .wp-block-cover.has-background-dim:before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -478,7 +478,7 @@ svg {
 .wp-block-cover-image:after,
 .wp-block-cover:after {
   display: block;
-  content: "";
+  content: '';
   font-size: 0;
   min-height: inherit;
 }
@@ -599,9 +599,9 @@ section.wp-block-cover-image > h2 {
   text-align: center;
 }
 
-.block-editor-block-list__block[data-type="core/embed"][data-align="left"]
+.block-editor-block-list__block[data-type='core/embed'][data-align='left']
   .block-editor-block-list__block-edit,
-.block-editor-block-list__block[data-type="core/embed"][data-align="right"]
+.block-editor-block-list__block[data-type='core/embed'][data-align='right']
   .block-editor-block-list__block-edit,
 .wp-block-embed.alignleft,
 .wp-block-embed.alignright {
@@ -663,7 +663,7 @@ section.wp-block-cover-image > h2 {
 .wp-embed-responsive
   .wp-block-embed.wp-embed-aspect-21-9
   .wp-block-embed__wrapper:before {
-  content: "";
+  content: '';
   display: block;
   padding-top: 50%;
 }
@@ -1108,7 +1108,7 @@ section.wp-block-cover-image > h2 {
 }
 
 .has-drop-cap:not(:focus):after {
-  content: "";
+  content: '';
   display: table;
   clear: both;
   padding-top: 14px;
@@ -1288,7 +1288,7 @@ p.has-text-color a {
 }
 
 .wp-block-separator.is-style-dots:before {
-  content: "\00b7 \00b7 \00b7";
+  content: '\00b7 \00b7 \00b7';
   color: currentColor;
   font-size: 20px;
   letter-spacing: 2em;
@@ -2016,7 +2016,7 @@ figure,
 }
 
 .wp-block-embed__wrapper:before {
-  content: "";
+  content: '';
   display: block;
   padding-top: 50%;
 }
@@ -2063,12 +2063,12 @@ figure,
   padding: 1.5rem;
 }
 
-*[class*="_inner-container"] > *:last-child {
+*[class*='_inner-container'] > *:last-child {
   margin-bottom: 0;
 }
 
 .dark-color-mode .has-background:not(.has-text-color),
-.dark-color-mode .wp-block-media-text[style*="background"],
+.dark-color-mode .wp-block-media-text[style*='background'],
 .dark-color-mode .wp-block-table.is-style-stripes tbody tr:nth-child(odd) {
   /* background-color: transparent !important; */
   background-image: -webkit-gradient(
