fix some gutenberg styles

--- a/examples/starter-base-dev/src/styles/wp-styles/_custom-gutenstyles.scss
+++ b/examples/starter-base-dev/src/styles/wp-styles/_custom-gutenstyles.scss
@@ -18,7 +18,7 @@ figure,
   position: relative;
 }
 .wp-block-embed__wrapper:before {
-  content: '';
+  content: "";
   display: block;
   padding-top: 50%;
 }
@@ -63,12 +63,12 @@ figure,
   padding: 1.5rem;
 }
 
-*[class*='_inner-container'] > *:last-child {
+*[class*="_inner-container"] > *:last-child {
   margin-bottom: 0;
 }
 
 .dark-color-mode .has-background:not(.has-text-color),
-.dark-color-mode .wp-block-media-text[style*='background'],
+.dark-color-mode .wp-block-media-text[style*="background"],
 .dark-color-mode .wp-block-table.is-style-stripes tbody tr:nth-child(odd) {
   /* background-color: transparent !important; */
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
@@ -87,4 +87,8 @@ figure,
 }
 .blocks-gallery-item a:hover {
   transform: scale(1.1);
+}
+.wp-block-cover__image-background.gatsby-image-wrapper {
+  width: 100% !important;
+  position: absolute !important;
 }
