style fixes for edge cases

--- a/packages/gatsby-theme-wp-ginger-chakra/src/styles/custom-gutenstyles.css
+++ b/packages/gatsby-theme-wp-ginger-chakra/src/styles/custom-gutenstyles.css
@@ -116,3 +116,12 @@ figure,
 [data-sal='slide-up'] {
   transform: translateY(2rem);
 }
+
+.wp-block-audio,
+.wp-block-table {
+  margin-bottom: 1.5rem;
+}
+
+pre {
+  overflow: auto;
+}
