--- a/examples/starter-base-dev-tailwind/src/styles/tailwind.css
+++ b/examples/starter-base-dev-tailwind/src/styles/tailwind.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  #___gatsby {
+    @apply text-base text-text dark:text-dark-text bg-bg dark:bg-dark-bg;
+  }
+}
