--- a/examples/starter-light/src/styles/tailwind.css
+++ b/examples/starter-light/src/styles/tailwind.css
@@ -4,7 +4,7 @@
 
 @layer base {
   #___gatsby {
-    @apply text-text dark:text-dark-text;
+    @apply text-text dark:text-dark-text bg-bg dark:bg-dark-bg;
   }
   a {
     @apply transition duration-300;
