--- a/examples/starter-light/src/styles/tailwind.css
+++ b/examples/starter-light/src/styles/tailwind.css
@@ -51,7 +51,7 @@
   }
   .menu-item,
   .menu-item a {
-    @apply transition duration-300 hover:text-menuHoverColor dark:hover:text-dark-menuHoverColor;
+    @apply transition duration-300 text-headerColor dark:text-dark-headerColor hover:text-menuHoverColor dark:hover:text-dark-menuHoverColor;
   }
   .menuV > .menu-item {
     @apply py-3 border-b border-dashed border-opacity-40 last:border-none;
