--- a/examples/starter-light/src/styles/tailwind.css
+++ b/examples/starter-light/src/styles/tailwind.css
@@ -4,7 +4,7 @@
 
 @layer base {
   #___gatsby {
-    @apply text-text dark:text-dark-text bg-bg dark:bg-dark-bg font-body;
+    @apply text-lg text-text dark:text-dark-text bg-bg dark:bg-dark-bg font-body;
   }
   a {
     @apply transition duration-300;
@@ -33,6 +33,18 @@
   }
   blockquote {
     @apply px-5 py-12 border-l-4 sm:px-12 border-accentColor max-w-[800px] mx-auto my-10 bg-teal-50 italic dark:bg-blueGray-800;
+  }
+  .card {
+    @apply shadow-md bg-cardBg dark:bg-dark-cardBg;
+  }
+  .divider {
+    @apply bg-text dark:bg-dark-text mx-auto h-[1px] w-[90%] opacity-25;
+  }
+  .btn {
+    @apply px-4 py-2 text-xs text-white uppercase transition duration-500 transform rounded-full shadow-md bg-gradient-to-r from-primary to-yellow hover:-translate-y-1;
+  }
+  .btn-secondary {
+    @apply from-secondary to-teal-900;
   }
   .content ul {
     @apply pl-6 mb-6;
