--- a/examples/starter-light/src/styles/tailwind.css
+++ b/examples/starter-light/src/styles/tailwind.css
@@ -34,12 +34,26 @@
   blockquote {
     @apply px-5 py-12 border-l-4 sm:px-12 border-accentColor max-w-[800px] mx-auto my-10 bg-teal-50 italic dark:bg-blueGray-800;
   }
+  /* gutenberg */
+  .wp-block-cover {
+    @apply z-0;
+  }
+  /* Content */
   .content ul {
     @apply pl-6 mb-6;
   }
   .content ol {
     @apply pl-6 mb-6;
   }
+  .content a,
+  .description a {
+    @apply text-black no-underline dark:text-white hover:text-secondary dark:hover:text-primary;
+  }
+
+  .content p {
+    @apply mb-5 text-text dark:text-dark-text;
+  }
+
   /* Components */
   .center-container {
     @apply px-5 mx-auto md:px-6 lg:px-10;
@@ -55,7 +69,7 @@
     @apply px-4 py-2 text-xs text-white uppercase transition duration-500 transform rounded-full shadow-md bg-gradient-to-r hover:-translate-y-1;
   }
   .btn-primary {
-    @apply from-primary to-yellow;
+    @apply from-primary to-purple;
   }
   .btn-secondary {
     @apply from-secondary to-teal-300;
@@ -63,7 +77,7 @@
 
   /* Pagination */
   .prev-next-text {
-    @apply text-sm font-bold tracking-widest uppercase;
+    @apply text-sm font-bold tracking-widest uppercase hover:text-secondary dark:hover:text-primary;
   }
   .prev-next-anim {
     @apply transition duration-700 transform scale-x-0 bg-text dark:bg-dark-text  w-7 h-[1px] group-hover:scale-x-100;
