--- a/examples/starter-light/src/styles/tailwind.css
+++ b/examples/starter-light/src/styles/tailwind.css
@@ -64,7 +64,7 @@
 
   /* Menu */
   .menu-item,
-  .menu-item a {
+  .menu-item > a {
     @apply transition duration-500 text-headerColor dark:text-dark-headerColor;
   }
   .menu-item > a {
