--- a/examples/starter-naked/src/styles/tailwind.css
+++ b/examples/starter-naked/src/styles/tailwind.css
@@ -34,6 +34,11 @@
   blockquote {
     @apply px-5 py-12 border-l-4 sm:px-12 border-accentColor max-w-[800px] mx-auto my-10 bg-teal-50 italic dark:bg-blueGray-800;
   }
+  /* gutenberg */
+  .wp-block-cover {
+    @apply z-0;
+  }
+  /* Content */
   .content ul {
     @apply pl-6 mb-6;
   }
