--- a/examples/starter-base-tailwind/src/styles/tailwind.css
+++ b/examples/starter-base-tailwind/src/styles/tailwind.css
@@ -52,13 +52,6 @@
   .description a {
     @apply text-black no-underline dark:text-white hover:text-secondary dark:hover:text-primary;
   }
-  /* Pagination */
-  .prev-next-text {
-    @apply text-sm font-bold tracking-widest uppercase;
-  }
-  .prev-next-anim {
-    @apply transition duration-700 transform scale-x-0 bg-text dark:bg-dark-text  w-7 h-[1px] group-hover:scale-x-100;
-  }
 }
 
 @layer utilities {
@@ -86,6 +79,13 @@
   }
   .menu-item [aria-current="page"] {
     @apply italic;
+  }
+  /* Pagination */
+  .prev-next-text {
+    @apply text-special  hover:text-primary;
+  }
+  .prev-next-anim {
+    @apply transition duration-700 transform scale-x-0 bg-text dark:bg-dark-text  w-7 h-[1px] group-hover:scale-x-100 group-hover:bg-primary;
   }
   /* Widgets */
   .widget-title {
