update packages + fix sass error

--- a/examples/starter-light/src/styles/wp/styles.scss
+++ b/examples/starter-light/src/styles/wp/styles.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @import "base-styles.scss";
 //@import "~@wordpress/block-library/src/style.scss";
 #start-resizable-editor-section {
