--- a/examples/starter-light/src/styles/tailwind.css
+++ b/examples/starter-light/src/styles/tailwind.css
@@ -1,4 +1,6 @@
+@import "base.css";
 @tailwind base;
+
 @tailwind components;
 @tailwind utilities;
 
@@ -52,6 +54,221 @@
 
   .content p {
     @apply mb-5 text-text dark:text-dark-text;
+  }
+
+  .content > * {
+    @apply mx-auto;
+  }
+
+  .content
+    > *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide):not(.content):not(.post-info) {
+    @apply max-w-4xl w-[calc(100%-3rem)]  sm:w-[calc(100%-4rem)];
+  }
+  [class*="__inner-container"] > [style*="width: 100vw"],
+  [class*="__inner-container"] > [style*="width:100vw"] {
+    @apply !max-w-full;
+  }
+  [class*="__inner-container"]
+    > *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide) {
+    @apply w-full max-w-4xl;
+  }
+  .alignnone,
+  .aligncenter,
+  .alignleft,
+  .alignright,
+  .alignwide {
+    @apply mx-auto;
+  }
+  .aligncenter > .gatsby-image-wrapper {
+    @apply mx-auto;
+  }
+  [class*="__inner-container"]
+    > *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright) {
+    @apply mx-auto;
+  }
+  /* gut Full */
+  .alignfull {
+    @apply relative w-full mx-auto my-12;
+  }
+  .alignfull:first-of-type {
+    @apply mt-0;
+  }
+  [class*="__inner-container"] > .alignfull {
+    @apply max-w-full;
+  }
+  .content > .wp-block-group.alignfull.has-background {
+    @apply p-8 sm:p-16 md:p-24;
+  }
+  .content > .wp-block-cover.alignfull:last-of-type {
+    @apply mb-0;
+  }
+  /* gut Wide */
+  .alignwide {
+    @apply max-w-6xl relative w-[calx(100%-4rem)];
+  }
+  [class*="__inner-container"] > .alignwide {
+    @apply w-full;
+  }
+  .wp-block-cover h1,
+  .wp-block-cover h2 {
+    @apply my-8;
+  }
+  .has-background {
+    @apply p-6;
+  }
+  .wp-block-media-text .wp-block-media-text__content {
+    @apply pt-6 sm:pt-0 px-0 sm:px-[8%];
+  }
+  .dark-color-mode & .has-background:not(.has-text-color),
+  .dark-color-mode & .wp-block-media-text[style*="background"],
+  .dark-color-mode
+    &
+    .wp-block-table.is-style-stripes
+    tbody
+    tr:nth-of-type(odd) {
+    @apply bg-blend-multiply;
+  }
+  [class^="wp-block"] .gatsby-image-wrapper {
+    @apply rounded-none shadow-none;
+  }
+  .blocks-gallery-grid {
+    @apply max-w-full;
+  }
+
+  .wp-block-button__link {
+    @apply margin-bottom: 1em;
+  }
+  .wp-block-button.is-style-squared * {
+    @apply border-radius: 0;
+  }
+  .wp-block-button.alignright {
+    @apply flex display:;
+    & > * {
+      margin-left: auto;
+    }
+  }
+  .wp-block-cover .wp-block-cover__image-background {
+    position: absolute !important;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0;
+    padding: 0;
+    width: 100% !important;
+    height: 100%;
+    max-width: none;
+    max-height: none;
+  }
+
+  .wp-block-image.alignwide,
+  .wp-block-image.alignfull {
+    .gatsby-image-wrapper {
+      width: 100% !important;
+    }
+  }
+  .wp-block-image.alignwide,
+  .wp-block-image.alignfull {
+    .gatsby-image-wrapper {
+      width: 100% !important;
+    }
+  }
+
+  *[class*="_inner-container"] > *:last-child {
+    margin-bottom: 0;
+  }
+
+  .content:after {
+    clear: both;
+    content: "";
+    display: block;
+  }
+
+  .wp-block-media-text {
+    /* This block's direction should not be manipulated by rtl, as the mediaPosition control does. */
+    direction: ltr;
+    display: grid;
+    grid-template-columns: 50% 1fr;
+    grid-template-rows: auto;
+
+    &.has-media-on-the-right {
+      grid-template-columns: 1fr 50%;
+    }
+  }
+
+  .wp-block-media-text.is-vertically-aligned-top {
+    .wp-block-media-text__content,
+    .wp-block-media-text__media {
+      align-self: start;
+    }
+  }
+  .wp-block-media-text,
+  .wp-block-media-text.is-vertically-aligned-center {
+    .wp-block-media-text__content,
+    .wp-block-media-text__media {
+      align-self: center;
+    }
+  }
+
+  .wp-block-media-text.is-vertically-aligned-bottom {
+    .wp-block-media-text__content,
+    .wp-block-media-text__media {
+      align-self: end;
+    }
+  }
+
+  .wp-block-media-text .wp-block-media-text__media {
+    grid-column: 1;
+    grid-row: 1;
+    margin: 0;
+  }
+
+  .wp-block-media-text .wp-block-media-text__content {
+    direction: ltr;
+    grid-column: 2;
+    grid-row: 1;
+    padding: 0 8% 0 8%;
+    word-break: break-word;
+  }
+
+  .wp-block-media-text.has-media-on-the-right .wp-block-media-text__media {
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  .wp-block-media-text.has-media-on-the-right .wp-block-media-text__content {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .wp-block-media-text__media img,
+  .wp-block-media-text__media video {
+    max-width: unset;
+    width: 100%;
+    vertical-align: middle;
+  }
+
+  .wp-block-media-text.is-image-fill .wp-block-media-text__media {
+    height: 100%;
+    min-height: 250px;
+    background-size: cover;
+  }
+
+  .wp-block-media-text.is-image-fill .wp-block-media-text__media > a {
+    display: block;
+    height: 100%;
+  }
+
+  .wp-block-media-text.is-image-fill .wp-block-media-text__media img {
+    /* The image is visually hidden but accessible to assistive technologies. */
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
   }
 
   /* Pagination */
