--- a/examples/starter-base-tailwind/src/styles/tailwind.css
+++ b/examples/starter-base-tailwind/src/styles/tailwind.css
@@ -1,6 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+@import "base.css";
+@import "wordpress.css";
 
 @layer base {
   #___gatsby {
