--- a/examples/ starter-base-gradient-tailwind/src/styles/tailwind.css
+++ b/examples/ starter-base-gradient-tailwind/src/styles/tailwind.css
@@ -1,60 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+@import "base.css";
+@import "wordpress.css";
 
 @layer base {
-  #___gatsby {
-    @apply text-text dark:text-dark-text bg-bg dark:bg-dark-bg font-body;
-  }
-  a {
-    @apply transition duration-300;
-  }
-
-  h1 {
-    @apply text-3xl font-heading leading-heading sm:text-4xl;
-  }
-  h2 {
-    @apply text-2xl font-heading leading-heading sm:text-3xl;
-  }
-  h3 {
-    @apply text-xl font-heading leading-heading sm:text-2xl;
-  }
-  h4 {
-    @apply text-lg font-heading leading-heading sm:text-xl;
-  }
-  h5 {
-    @apply text-sm font-heading leading-heading;
-  }
-  h6 {
-    @apply text-xs font-heading leading-heading;
-  }
-  table {
-    @apply mb-6;
-  }
-  blockquote {
-    @apply px-5 py-12 border-l-4 sm:px-12 border-accentColor max-w-[800px] mx-auto my-10 bg-teal-50 italic dark:bg-blueGray-800;
-  }
-  /* gutenberg */
-  .wp-block-cover {
-    @apply z-0;
-  }
-  /* Content */
-  .content ul {
-    @apply pl-6 mb-6;
-  }
-  .content ol {
-    @apply pl-6 mb-6;
-  }
-  .content p {
-    @apply mb-5 text-text dark:text-dark-text;
-  }
-  .content a,
-  .description a {
-    @apply text-black no-underline dark:text-white hover:text-secondary dark:hover:text-primary;
-  }
-}
-
-@layer components {
   /* Menu */
   .menu-item,
   .menu-item > a {
@@ -86,6 +36,9 @@
   .widget-title {
     @apply mb-3;
   }
+}
+
+@layer components {
   .center-container {
     @apply px-5 mx-auto md:px-6 lg:px-10;
   }
