--- a/examples/starter-base-tailwind/src/styles/tailwind.css
+++ b/examples/starter-base-tailwind/src/styles/tailwind.css
@@ -97,7 +97,7 @@
     @apply mb-3;
   }
   .center-container {
-    @apply px-5 mx-auto md:px-6 lg:px-10;
+    @apply px-5 mx-auto md:px-6 lg:px-10 w-[100%];
   }
   .card {
     @apply rounded-lg shadow-lg bg-cardBg dark:bg-dark-cardBg;
