--- a/examples/starter-naked/src/styles/tailwind.css
+++ b/examples/starter-naked/src/styles/tailwind.css
@@ -38,7 +38,7 @@
 @layer components {
   /* Components */
   .center-container {
-    @apply px-5 mx-auto md:px-6 lg:px-10;
+    @apply px-5 mx-auto md:px-6 lg:px-10 w-[100%];
   }
   .card {
     @apply shadow-md bg-cardBg dark:bg-dark-cardBg;
