--- a/examples/starter-naked/src/styles/wordpress.css
+++ b/examples/starter-naked/src/styles/wordpress.css
@@ -4,7 +4,7 @@
 }
 
 .content
-  > *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide):not(.content):not(.post-info) {
+  > *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide):not(.content) {
   @apply max-w-4xl w-[calc(100%-3rem)]  sm:w-[calc(100%-4rem)];
 }
 [class*="__inner-container"] > [style*="width: 100vw"],
