--- a/examples/starter-light/src/styles/wordpress.css
+++ b/examples/starter-light/src/styles/wordpress.css
@@ -62,9 +62,9 @@
 .wp-block-media-text .wp-block-media-text__content {
   @apply pt-6 sm:pt-0 px-0 sm:px-[8%];
 }
-.dark-color-mode & .has-background:not(.has-text-color),
-.dark-color-mode & .wp-block-media-text[style*="background"],
-.dark-color-mode & .wp-block-table.is-style-stripes tbody tr:nth-of-type(odd) {
+.dark .has-background:not(.has-text-color),
+.dark .wp-block-media-text[style*="background"],
+.dark .wp-block-table.is-style-stripes tbody tr:nth-of-type(odd) {
   @apply bg-blend-multiply;
 }
 [class^="wp-block"] .gatsby-image-wrapper {
